kubernetes/apps/media/maintainerr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: maintainerr
  namespace: media
  labels:
    route.scope: internal
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: Media
      url: "https://maintainerr.vaderrp.com/api/app/status"
      dns: ""
      client:
        dns-resolver: "tcp://192.168.5.8:53"
        timeout: 15s
      conditions:
        - "[STATUS] == 200"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Maintainerr
    gethomepage.dev/icon: maintainerr.png
    gethomepage.dev/href: https://maintainerr.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=maintainerr
    gethomepage.dev/description: Media Maintenance
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: network
  hostnames:
    - maintainerr.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: maintainerr
          port: 80
          weight: 1
